<?xml version="1.0"?>
<package>
 <name>unsupervised_msgs</name>
 <version>0.0.0</version>
 <description>ALl msgs that are use at unsupervised.ai</description>

 <maintainer email="clement@unsupervised.ai">clement</maintainer>

 <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
 <build_depend>sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
 <run_depend>sensor_msgs</run_depend>

</package>